# databricks_apache_spark_associate_certificate_study

./: .gitignore  README.md  docker-compose.yaml  pyproject.toml
notebooks_python/: 2024-02-01_gsg_DataFrame_basics.py  2024-02-08_gsg_DataFrame_Wide_Transformations.py  2024-03-02_gsg_SparkSession_test.ipynb  2025-04-26_gsg_Pyspark_interview_review.ipynb
notebooks_scala/: Adaptive Query Execution.scala  Create_DataFrames.scala  DataFrame_Basics.scala  DataFrame_Manipulations.scala  Execution Hierarchy.scala  Saving_Data.scala  User Defined Function.scala
