[project]
name = "databricks-apache-spark-associate-certificate-study"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.6",
    "jupyterlab>=4.4.1",
    "kagglehub>=0.3.12",
    "pyspark>=3.5.5",
]
